[package]
name = "trayicon"
version = "0.1.1"
authors = [
    "Jari Otto Oskari Pennanen <ciantic@oksidi.com>",
    "Regentag <yeongtaek.ham@gmail.com>" ]
edition = "2018"
description = "Tray Icon, that thing in the corner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Regentag/trayicon-rs/"
repository = "https://github.com/Regentag/trayicon-rs/"

[target.'cfg(windows)'.dependencies]
windows = "0.9.1"

[target.'cfg(windows)'.build-dependencies]
windows = "0.9.1"

[lib]
name = "trayicon"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[workspace]
members = [
    "examples/win32",
]
